# octo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: device.cpp  device.h  window.cpp  window.h
src/tools/: duration.h  log.cpp  log.h
